--- a/afs/media/css/project.css
+++ b/afs/media/css/project.css
@@ -340,6 +340,8 @@
     background-color: #fff;
     height: 100%;
     overflow-y: auto;
+    display: flex;
+    flex-direction: column;
 }
 
 .thematic-report-footer {
