--- a/afs/templates/views/report-templates/thematic.htm
+++ b/afs/templates/views/report-templates/thematic.htm
@@ -60,42 +60,81 @@
 {% block body %}
 <div class="thematic-report-body-container">
     <div class="thematic-report-body">
-        <!-- ko if: activeTab() && activeTab().sections().length -->
-        <!-- ko foreach: activeTab().sections() -->
-            <div 
-                style="
-                    display: flex;
-                    flex-direction: column;
-                    padding: 18px 20px 26px 20px;
-                "
-                class="thematic-section"
-                data-bind="style: { 'border-bottom': $data.data.length ? '1px solid #ddd' : 'none' }" 
-            >
-                <div
-                    class="thematic-section-title"
-                    style="
-                        display: flex;
-                        justify-content: center;
-                        width: 220px;
-                        background-color: #fafafa;
-                        border: 1px solid #ddd;
-
-                    "
-                >
-                    <h5 data-bind="text: title"></h5>
-                </div>
-
-                <!-- ko if: $data.data.length -->
-                <!-- /ko -->
-                <!-- ko ifnot: $data.data.length -->
+        <!-- ko if: activeTab() -->
+            <!-- ko with: activeTab() -->
+                <!-- ko foreach: sections() -->
                     <div 
-                        style="padding: 8px 0px"
+                        style="
+                            display: flex;
+                            flex-direction: column;
+                            padding: 18px 20px 26px 20px;
+                        "
+                        class="thematic-section"
+                        data-bind="style: { 'border-bottom': !$parent.isSectionEmpty($data) ? '1px solid #ddd' : 'none' }" 
+
                     >
-                        <span>{% trans 'No data has been added yet.' %}</span>
+                        <div
+                            style="
+                                display: flex;
+                                justify-content: space-between;
+                                width: 220px;
+                                background-color: #fafafa;
+                                border: 1px solid #ddd;
+
+                            "
+                            class="thematic-section-title"
+                        >
+                            <!-- ko if: $data['hasPlusSign'] -->
+                            <button style="border: none;">
+                                <i class="fa fa-plus"></i>
+                            </button>
+                            <!-- /ko -->
+
+                            <div
+                                style="
+                                    display: flex;
+                                    justify-content: center;
+                                    width: 100%;
+                                "
+                            >
+                                <h5 data-bind="text: sectionTitle"></h5>
+                            </div>
+                        </div>
+
+                        <div style="display:none" data-bind="text: console.log($data, $parent)"></div>
+
+                        <!-- ko if: childNodeData.length -->
+                        <table>
+                            <thead>
+                                <tr data-bind="foreach: childNodeData">
+                                    <th data-bind="text: columnName"></th>
+                                </tr>
+                            </thead>
+                            <tbody>
+                                <tr data-bind="foreach: childNodeData">
+                                    <td data-bind="text: $data.data[VALUE]"></td>
+                                </tr>
+                            </tbody>
+                        </table>
+                        <!-- /ko -->
+                        <!-- ko ifnot: childNodeData.length -->
+                        <table>
+                            <tbody>
+                                <tr>
+                                    <td data-bind="text: $data.data[VALUE]"></td>
+                                </tr>
+                            </tbody>
+                        </table>
+                        <!-- /ko -->
+
+                        <!-- ko if: $parent.isSectionEmpty($data) -->
+                        <div style="padding: 8px 0px">
+                            <span>{% trans 'No data has been added yet.' %}</span>
+                        </div>
+                        <!-- /ko -->
                     </div>
                 <!-- /ko -->
-            </div>
-        <!-- /ko -->
+            <!-- /ko -->
         <!-- /ko -->
     </div>
 </div>
