refactor logic, brken ui #340

--- a/afs/templates/views/report-templates/thematic.htm
+++ b/afs/templates/views/report-templates/thematic.htm
@@ -112,7 +112,7 @@
                                     </tr>
                                 </thead>
                                 <tbody>
-                                    <tr data-bind="foreach: childNodeData">
+                                    <tr data-bind="foreach: resourceInstanceData">
                                         <td data-bind="text: $data.data[VALUE]"></td>
                                     </tr>
                                 </tbody>
