--- a/afs/templates/views/report-templates/thematic.htm
+++ b/afs/templates/views/report-templates/thematic.htm
@@ -69,7 +69,9 @@
                             style="
                                 display: flex;
                                 flex-direction: column;
-                                padding: 18px 20px 26px 20px;
+                                padding-top: 18px;
+                                padding-bottom: 26px;
+                                margin: 0 20px;
                             "
                             class="thematic-section"
                             data-bind="style: { 'border-bottom': $data.resourceInstanceData.length ? '1px solid #ddd' : 'none' }" 
