--- a/afs/templates/views/report-templates/thematic.htm
+++ b/afs/templates/views/report-templates/thematic.htm
@@ -105,20 +105,65 @@
                                 </div>
                             </div>
 
-
                             <!-- ko if: $data.resourceInstanceData.length -->
+
                                 <!-- ko if: $data.childNodeInformation -->
-                                <table>
-                                    <thead>
-                                        <tr data-bind="foreach: $data.childNodeInformation">
-                                            <th data-bind="text: columnName"></th>
+                                <table
+                                    style="
+                                        margin: 12px 0;
+                                    "
+                                >
+                                    <thead
+                                        style="border: 1px solid #ddd"
+                                        class="thematic-report-table-head"
+
+                                    >
+                                        <tr>
+                                            <th
+                                                style="
+                                                    display: flex;
+                                                    min-height: 30px;
+                                                    border-right: 1px solid #ddd;
+                                                    margin-right: 5px;
+                                                "
+                                            ><!-- dummy <th> for button heading --></th>
+                                            
+                                            <!-- ko foreach: $data.childNodeInformation -->
+                                                <th 
+                                                    style="padding: 6px 0;"
+                                                    data-bind="text: columnName"
+                                                ></th>
+                                            <!-- /ko -->
                                         </tr>
                                     </thead>
-                                    <tbody>
+                                    <tbody
+                                        style="border: 1px solid #ddd"
+                                        class="thematic-report-table-body"
+
+                                    >
                                         <!-- ko foreach: $data.resourceInstanceData -->
                                         <tr>
+                                            <td
+                                                style="
+                                                    display: flex;
+                                                    align-items: center;
+                                                    border-right: 1px solid #ddd;
+                                                    margin-right: 5px;
+                                                    min-height: 30px;
+                                                "
+                                            >
+                                                <button>
+                                                    <i class="fa fa-wrench"></i>
+                                                </button>
+                                                <button>
+                                                    <i class="fa fa-trash"></i>
+                                                </button>
+                                            </td>
                                             <!-- ko foreach: $parent.childNodeInformation -->
-                                            <td data-bind="text: $parents[2].getResourceInstanceNodeData($data.nodeId, $parent)[VALUE]"></td>
+                                            <td 
+                                                style="padding: 6px 0;"
+                                                data-bind="text: $parents[2].getResourceInstanceNodeData($data.nodeId, $parent)[VALUE]"
+                                            ></td>
                                             <!-- /ko -->
                                         </tr>
                                         <!-- /ko -->
@@ -126,16 +171,43 @@
                                 </table>
                                 <!-- /ko -->
                                 <!-- ko ifnot: $data.childNodeInformation -->
-                                <table>
-                                    <tbody>
+                                <table
+                                    style="
+                                        margin: 12px 0;
+                                        width: fit-content;
+                                    "
+                                >
+                                    <tbody
+                                        style="border: 1px solid #ddd"
+                                        class="thematic-report-table-body"
+                                    >
                                         <!-- ko foreach: $data.resourceInstanceData -->
                                         <tr>
-                                            <td data-bind="text: $data[VALUE]"></td>
+                                            <td
+                                                style="
+                                                    padding-right: 6px;
+                                                    border-right: 1px solid #ddd;
+                                                "
+                                            >
+                                                <button>
+                                                    <i class="fa fa-wrench"></i>
+                                                </button>
+                                                <button>
+                                                    <i class="fa fa-trash"></i>
+                                                </button>
+                                            </td>
+                                            <td 
+                                                style="
+                                                    padding: 6px;
+                                                "
+                                                data-bind="text: $data[VALUE]"
+                                            ></td>
                                         </tr>
                                         <!-- /ko -->
                                     </tbody>
                                 </table>
                                 <!-- /ko -->
+
                             <!-- /ko -->
                             <!-- ko ifnot: $data.resourceInstanceData.length -->
                             <div style="padding: 8px 0px">
