--- a/afs/templates/views/report-templates/thematic.htm
+++ b/afs/templates/views/report-templates/thematic.htm
@@ -121,16 +121,13 @@
                                         <tr>
                                             <th
                                                 style="
-                                                    display: flex;
-                                                    min-height: 30px;
                                                     border-right: 1px solid #ddd;
-                                                    margin-right: 5px;
                                                 "
                                             ><!-- dummy <th> for button heading --></th>
                                             
                                             <!-- ko foreach: $data.childNodeInformation -->
                                                 <th 
-                                                    style="padding: 6px 0;"
+                                                    style="padding: 6px;"
                                                     data-bind="text: columnName"
                                                 ></th>
                                             <!-- /ko -->
@@ -145,11 +142,9 @@
                                         <tr>
                                             <td
                                                 style="
-                                                    display: flex;
-                                                    align-items: center;
+                                                    padding: 6px;
+                                                    width: 75px;
                                                     border-right: 1px solid #ddd;
-                                                    margin-right: 5px;
-                                                    min-height: 30px;
                                                 "
                                             >
                                                 <button>
@@ -161,7 +156,7 @@
                                             </td>
                                             <!-- ko foreach: $parent.childNodeInformation -->
                                             <td 
-                                                style="padding: 6px 0;"
+                                                style="padding: 6px;"
                                                 data-bind="text: $parents[2].getResourceInstanceNodeData($data.nodeId, $parent)[VALUE]"
                                             ></td>
                                             <!-- /ko -->
@@ -185,7 +180,8 @@
                                         <tr>
                                             <td
                                                 style="
-                                                    padding-right: 6px;
+                                                    padding: 6px;
+                                                    width: 75px;
                                                     border-right: 1px solid #ddd;
                                                 "
                                             >
