update table head css #340

--- a/afs/media/css/project.css
+++ b/afs/media/css/project.css
@@ -346,6 +346,7 @@
 
 .thematic-report-table-head {
     background: #fafafa;
+    border: 1px solid #ddd;
 }
 
 .thematic-report-table-body > :nth-child(even) {
