--- a/afs/templates/views/report-templates/thematic.htm
+++ b/afs/templates/views/report-templates/thematic.htm
@@ -108,22 +108,12 @@
                             <!-- ko if: $data.resourceInstanceData.length -->
 
                                 <!-- ko if: $data.childNodeInformation -->
-                                <table
-                                    style="
-                                        margin: 12px 0;
-                                    "
-                                >
-                                    <thead
-                                        style="border: 1px solid #ddd"
-                                        class="thematic-report-table-head"
-
-                                    >
+                                <table style="margin: 12px 0;">
+                                    <thead class="thematic-report-table-head">
                                         <tr>
-                                            <th
-                                                style="
-                                                    border-right: 1px solid #ddd;
-                                                "
-                                            ><!-- dummy <th> for button heading --></th>
+                                            <th style="border-right: 1px solid #ddd;">
+                                                <!-- dummy <th> for button heading -->
+                                            </th>
                                             
                                             <!-- ko foreach: $data.childNodeInformation -->
                                                 <th 
@@ -166,12 +156,7 @@
                                 </table>
                                 <!-- /ko -->
                                 <!-- ko ifnot: $data.childNodeInformation -->
-                                <table
-                                    style="
-                                        margin: 12px 0;
-                                        width: fit-content;
-                                    "
-                                >
+                                <table style="margin: 12px 0; width: fit-content;">
                                     <tbody
                                         style="border: 1px solid #ddd"
                                         class="thematic-report-table-body"
