--- a/afs/templates/views/report-templates/thematic.htm
+++ b/afs/templates/views/report-templates/thematic.htm
@@ -66,41 +66,17 @@
                 <!-- ko foreach: sections() -->
                     <!-- ko if: $data.resourceInstanceData.length || !$parents[1].emptyReportSectionsHidden() -->
                         <div 
-                            style="
-                                display: flex;
-                                flex-direction: column;
-                                padding-top: 18px;
-                                padding-bottom: 26px;
-                                margin: 0 20px;
-                            "
-                            class="thematic-section"
+                            class="thematic-report-section"
                             data-bind="style: { 'border-bottom': $data.resourceInstanceData.length ? '1px solid #ddd' : 'none' }" 
-
                         >
-                            <div
-                                style="
-                                    display: flex;
-                                    justify-content: space-between;
-                                    width: 220px;
-                                    background-color: #fafafa;
-                                    border: 1px solid #ddd;
-
-                                "
-                                class="thematic-section-title"
-                            >
+                            <div class="thematic-report-section-title-container">
                                 <!-- ko if: $data['hasPlusSign'] -->
                                 <button style="border: none;">
                                     <i class="fa fa-plus"></i>
                                 </button>
                                 <!-- /ko -->
 
-                                <div
-                                    style="
-                                        display: flex;
-                                        justify-content: center;
-                                        width: 100%;
-                                    "
-                                >
+                                <div class="thematic-report-section-title">
                                     <h5 data-bind="text: sectionTitle"></h5>
                                 </div>
                             </div>
@@ -116,27 +92,14 @@
                                             </th>
                                             
                                             <!-- ko foreach: $data.childNodeInformation -->
-                                                <th 
-                                                    style="padding: 6px;"
-                                                    data-bind="text: columnName"
-                                                ></th>
+                                                <th data-bind="text: columnName"></th>
                                             <!-- /ko -->
                                         </tr>
                                     </thead>
-                                    <tbody
-                                        style="border: 1px solid #ddd"
-                                        class="thematic-report-table-body"
-
-                                    >
+                                    <tbody class="thematic-report-table-body">
                                         <!-- ko foreach: $data.resourceInstanceData -->
                                         <tr>
-                                            <td
-                                                style="
-                                                    padding: 6px;
-                                                    width: 75px;
-                                                    border-right: 1px solid #ddd;
-                                                "
-                                            >
+                                            <td class="thematic-report-table-body-button-container">
                                                 <button>
                                                     <i class="fa fa-wrench"></i>
                                                 </button>
@@ -145,10 +108,7 @@
                                                 </button>
                                             </td>
                                             <!-- ko foreach: $parent.childNodeInformation -->
-                                            <td 
-                                                style="padding: 6px;"
-                                                data-bind="text: $parents[2].getResourceInstanceNodeData($data.nodeId, $parent)[VALUE]"
-                                            ></td>
+                                                <td data-bind="text: $parents[2].getResourceInstanceNodeData($data.nodeId, $parent)[VALUE]"></td>
                                             <!-- /ko -->
                                         </tr>
                                         <!-- /ko -->
@@ -157,33 +117,19 @@
                                 <!-- /ko -->
                                 <!-- ko ifnot: $data.childNodeInformation -->
                                 <table style="margin: 12px 0; width: fit-content;">
-                                    <tbody
-                                        style="border: 1px solid #ddd"
-                                        class="thematic-report-table-body"
-                                    >
+                                    <tbody class="thematic-report-table-body">
                                         <!-- ko foreach: $data.resourceInstanceData -->
-                                        <tr>
-                                            <td
-                                                style="
-                                                    padding: 6px;
-                                                    width: 75px;
-                                                    border-right: 1px solid #ddd;
-                                                "
-                                            >
-                                                <button>
-                                                    <i class="fa fa-wrench"></i>
-                                                </button>
-                                                <button>
-                                                    <i class="fa fa-trash"></i>
-                                                </button>
-                                            </td>
-                                            <td 
-                                                style="
-                                                    padding: 6px;
-                                                "
-                                                data-bind="text: $data[VALUE]"
-                                            ></td>
-                                        </tr>
+                                            <tr>
+                                                <td class="thematic-report-table-body-button-container">
+                                                    <button>
+                                                        <i class="fa fa-wrench"></i>
+                                                    </button>
+                                                    <button>
+                                                        <i class="fa fa-trash"></i>
+                                                    </button>
+                                                </td>
+                                                <td data-bind="text: $data[VALUE]"></td>
+                                            </tr>
                                         <!-- /ko -->
                                     </tbody>
                                 </table>
