--- a/afs/templates/views/components/workflows/object-search-step.htm
+++ b/afs/templates/views/components/workflows/object-search-step.htm
@@ -1,4 +1,4 @@
-<div class="sampling-activity object-search-step">
+<div class="object-search-step">
     <div class="workflow-search-panel">
         <div class="search-bar">
             <input data-bind="select2Query: {select2Config: targetResourceSelectConfig}">
