Add sample info step skeleton, #359

--- a/afs/media/css/project.css
+++ b/afs/media/css/project.css
@@ -454,3 +454,11 @@
     margin: 15px;
     display: inline-flex;
 }
+
+.tabbed-workflow-step-body .form-group>label {
+    display:none;
+}
+
+.tabbed-workflow-step-body .card-help {
+    display:none;
+}
