--- a/afs/templates/views/components/workflows/upload-dataset/select-phys-thing-step.htm
+++ b/afs/templates/views/components/workflows/upload-dataset/select-phys-thing-step.htm
@@ -1,6 +1,7 @@
 {% load i18n %}
 <div style="height: 100%; padding: 10px 24px;">
-    <div class="msm-map-container">
+    <div style="padding: 5px">
+        <div class="widget-input-label">Project</div>
         <div data-bind="component: {
             name: 'resource-instance-select-widget',
             params: {
@@ -11,15 +12,23 @@
                 value: projectValue,
             }
         }"></div>
-        <!--ko if: termFilter() -->
-        <div data-bind="component: {
-        name: 'resource-instance-select-widget',
-        params: {
-            termFilter: termFilter(),
-            renderContext: 'workflow', 
-            value: physicalThingValue,
-        }
-        }"></div>
-        <!--/ko-->
     </div>
+    <!--ko if: termFilter() -->
+    <div style="padding: 5px">
+        <div class="widget-input-label">Analyzed Object or Sample</div>
+        <div data-bind="component: {
+            name: 'resource-instance-select-widget',
+            params: {
+                termFilter: termFilter(),
+                renderContext: 'workflow', 
+                value: physicalThingValue,
+            }
+        }"></div>
+    </div>
+    <!--/ko-->
+    <!-- ko if: hasSetWithPhysicalThing() === false -->
+    <div class="tabbed-workflow-step-information-box widget-input-label" style="text-align: center; margin-top: 16px; height:fit-content; background-color: #fde9ad;">
+        This project has no associated Objects. Your project must have an associated Object Collection with an Object before proceeding.
+    </div>
+    <!-- /ko -->
 </div>
