--- a/afs/templates/views/components/workflows/workflow-manifest-manager.htm
+++ b/afs/templates/views/components/workflows/workflow-manifest-manager.htm
@@ -15,7 +15,7 @@
         left: 50px;
         height: calc(100vh - 50px);
         width: calc(100vw - 50px);
-        transition: all .5s;
+        transition: all linear .4s;
     "
     data-bind="
         style: {
@@ -39,7 +39,7 @@
         left: calc(100vw - 450px);
         height: 42px;
         width: 180px;
-        transition: all .5s;
+        transition: all linear .4s;
     "
     data-bind="
         style: {
