Saves instance and tiles and rehydrates step on revisit. re #289

--- a/afs/templates/views/components/workflows/upload-dataset/instrument-info-step.htm
+++ b/afs/templates/views/components/workflows/upload-dataset/instrument-info-step.htm
@@ -32,7 +32,7 @@
             name: 'rich-text-widget',
             params: {
                 renderContext: 'workflow', 
-                value: parametersValue,
+                value: parameterValue,
             }
         }"></div>
     </div>
