Add locked to rr once resource created, #359 #368

--- a/afs/templates/views/components/workflows/upload-dataset/select-phys-thing-step.htm
+++ b/afs/templates/views/components/workflows/upload-dataset/select-phys-thing-step.htm
@@ -10,6 +10,7 @@
                 ],
                 renderContext: 'workflow', 
                 value: projectValue,
+                disabled: locked,
             }
         }"></div>
     </div>
@@ -22,6 +23,7 @@
                 termFilter: termFilter(),
                 renderContext: 'workflow', 
                 value: physicalThingValue,
+                disabled: locked,
             }
         }"></div>
     </div>
