fix manifest manager opacity && saving mask stutter #354

--- a/afs/templates/views/components/workflows/analysis-areas-image-step.htm
+++ b/afs/templates/views/components/workflows/analysis-areas-image-step.htm
@@ -52,6 +52,7 @@
         height: calc(100vh - 50px);
         width: calc(100vw - 50px);
         transition: all linear .3s;
+        z-index: 1;
     "
     data-bind="
         style: {
@@ -83,4 +84,4 @@
         },
         click: handleExitFromManifestManager
     "
->BAIL FROM THE PLUGIN</button>
+>Return to Worflow</button>
