--- a/afs/templates/views/components/workflows/create-project-workflow/create-project-final-step.htm
+++ b/afs/templates/views/components/workflows/create-project-workflow/create-project-final-step.htm
@@ -2,7 +2,7 @@
 <!-- ko if: loading() === false -->
 <div class="final-step">
     <div class="afs-final-step-section" style="padding: 15px; display: flex; flex-direction: column">
-        <h5 class="summary-value">{% trans 'Created or Modified Resource Instance' %}</h5>
+        <h5 class="summary-value">{% trans 'Created Resource Instance' %}</h5>
         <div style="display: inline-flex; width: inherit; justify-content: space-between;">
             <div style="display: flex; flex-direction: column;">
                 <a data-bind="attr: { href: urls.resource + '/' + resourceid}" target="_blank">
