--- a/afs/templates/views/components/workflows/analysis-areas-image-step.htm
+++ b/afs/templates/views/components/workflows/analysis-areas-image-step.htm
@@ -7,13 +7,13 @@
         Or upload image(s) to create a new service.
     </p>
 
-    <!-- ko foreach: physicalThingDigitalReferencePreferredManifestResourceData() -->
+    <!-- ko foreach: [...physicalThingDigitalReferencePreferredManifestResourceData(), ...physicalThingDigitalReferenceAlternateManifestResourceData()] -->
         <div
             style="
                 display: flex;
                 cursor: pointer;
             "
-            data-bind="click: function() { $parent.selectedPhysicalThingImageService($data.displayname) }"
+            data-bind="click: function() { $parent.selectedPhysicalThingImageServiceName($data.displayname) }"
         >
             <input 
                 style="
@@ -23,7 +23,7 @@
                 type="radio" 
                 data-bind="{
                     value: $data.displayname,
-                    checked: $parent.selectedPhysicalThingImageService,
+                    checked: $parent.selectedPhysicalThingImageServiceName,
                 }"
             />
             <label 
